.k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: game-library-deployment
    namespace: game-library
    labels:
        app: game-library
spec:
    replicas: 1
    strategy:
        # use this because of error "1 node(s) didn't have free ports for the requested pod ports"
        type: Recreate
    selector:
        matchLabels:
            app: game-library
    template:
        metadata:
            labels:
                app: game-library
        spec:
            containers:
              - name: game-library
                image: asctod/game-library:_IMAGE_TAG_
                readinessProbe:
                    httpGet:
                        path: /api/readiness
                        port: 8000
                    initialDelaySeconds: 10
                    periodSeconds: 30
                    timeoutSeconds: 5
                    failureThreshold: 2
                livenessProbe:
                    httpGet:
                        path: /api/liveness
                        port: 8000
                    initialDelaySeconds: 10
                    periodSeconds: 30
                    timeoutSeconds: 2
                    failureThreshold: 2
                ports:
                  - name: api
                    containerPort: 8000
                  - name: debug
                    containerPort: 6060
                  - name: grpc
                    containerPort: 9000
                imagePullPolicy: Always
            # had problems with https calls in pod (tls handshake failure).
            # 10.152.183.10 is kube-dns
            dnsPolicy: "None"
            dnsConfig:
                nameservers:
                  - 10.152.183.10
                  - 8.8.8.8
                searches:
                  - game-library.svc.cluster.local
                  - svc.cluster.local
                  - cluster.local
                options:
                  - name: ndots
                    value: "1"
            hostAliases:
              - ip: _K8S_IP_
                hostnames:
                  - _K8S_URL_
---
kind: Deployment
apiVersion: apps/v1
metadata:
    name: redis-deployment
    namespace: game-library
    labels:
        app: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            app: redis
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
              - name: redis
                image: redis:8.10-alpine3.23
                ports:
                  - name: redis
                    containerPort: 6379
            hostAliases:
              - ip: _K8S_IP_
                hostnames:
                  - _K8S_URL_
