.k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
    name: game-library-service
    namespace: game-library
spec:
    ports:
      - protocol: TCP
        name: api
        port: 8000
        targetPort: api
      - protocol: TCP
        name: debug
        port: 6060
        targetPort: debug
      - protocol: TCP
        name: grpc
        port: 9000
        targetPort: grpc
    selector:
        app: game-library
---
kind: Service
apiVersion: v1
metadata:
  name: redis-service
  namespace: game-library
spec:
  ports:
    - protocol: TCP
      name: redis
      port: 6379
      targetPort: redis
  selector:
    app: redis
---
kind: Service
apiVersion: v1
metadata:
  name: graylog-service
  namespace: game-library
spec:
  ports:
    - protocol: TCP
      name: http
      port: 9000
      targetPort: http
    - protocol: UDP
      name: gelf
      port: 12201
      targetPort: gelf
  selector:
    app: graylog
